# semantic-search-quality-evaluator

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
python-backend/: main.py  pyproject.toml
python-backend/.hypothesis/constants/: 02690858722907c5  07bd7b33223c2724  07c8c95adcba84c9  14c320eb889cf0df  1ffd83adf9db4b6d  27d0f13e6242af98  2b100ef07eaac825  2b2a65b3eee1ad6c  35f7c375d509000a  3a528a9dcda6f63d  3d52a3aff38d0141  431b1be0ee123cd4  460d09347fb07c55  48ce7ad6407d8be9  5abb51edb2df6bba  5fbcc7cada814854  6c6b51740810cd63  6c738d031a698a86  6c7a20b4fa67f2b1  719035fc862833ed  71a166e6ff671d14  739bae499da9de52  73d6c963c7b9bf27  7e8dcfe56dd70a51  8bec68bae27ed031  9076fb06f34dcf11  92c9bff52baf0c15  92dfe1999dd6b16c  95e134bc200324cf  9782cb1ed1905258  a3e0c9e8f580059b  a653a9e4ce43894f  a906858cefa7ff83  aab2b6eda3f4699d  af364ab2c857c078  b0cadd70d47b1133  (+11 more)
python-backend/api/: analyze.py  approvals.py  errors.py  exports.py  import_.py  normalize.py  recommendations.py  runs.py
python-backend/engine/: __init__.py  comparison.py  consistency_metrics.py  coverage_metrics.py  export.py  intent_config.py  intent_engine.py  intent_matching.py  intent_pipeline.py  normalization.py  parser.py  priority_rules.py  protection_rules.py  recommendation_engine.py  schemas.py  serializer.py  statistical_evaluation.py
python-backend/models/: __init__.py  domain.py  enums.py  intent_models.py  requests.py
python-backend/storage/: __init__.py  base.py  file_backed.py  memory.py
python-backend/tests/: conftest.py
(+157 files in other folders)
