[project]
name = "python-analysis-backend"
version = "0.1.0"
description = "Quality Evaluation analysis engine - Python FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["api*", "engine*", "models*", "storage*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
